Creating zip, rpm, deb, exe, tar packages (#483)
* creating exe package

* Added cmd for konduit windows

* Updated tar and zip packages for all platforms

* Creating RPM package and upgrading the tar package features

* Preparing deb package

* Adding echo off and update naming

Signed-off-by: shamsulazeem <shamsazeem20@gmail.com>

* Build script addition

* build script updates